--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
 <head>
+
+	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 
 <body>
-	<h1>Hola</h1>
+
+	<center>
+		<h1>Hola</h1>
+		<h2>Prueba de la prueba</h2>
+		<a href= "hola">Esto es un link</a>
+	</center>
 	
 </body>
 
