--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 
 <body>
 
-	<center>
-		<h1>Hola</h1>
-		<h2>Prueba de la prueba</h2>
-		<a href= "hola">Esto es un link</a>
-	</center>
+	<div id="container">
+		<center>
+			<h1>Curso de GIT</h1>
+			<h2>Esto es una prueba de git de codigo facilito</h2>
+			<a href= "hola">Esto es un link</a>
+		</center>
+	</div>
 	
 </body>
 
